Bug 162782 - FILESAVE SVG: semi-transparent shape text in a bullet list crashes
Summary: FILESAVE SVG: semi-transparent shape text in a bullet list crashes
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL: https://vmiklos.hu/blog/sd-semi-trans...
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: SVG-Save
  Show dependency treegraph
 
Reported: 2024-09-04 08:26 UTC by Miklos Vajna
Modified: 2025-06-05 12:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (12.68 KB, application/vnd.oasis.opendocument.presentation)
2024-09-04 08:26 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-09-04 08:26:29 UTC
Created attachment 196216 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document in Impress

2) Export to SVG on the UI, or by using 'soffice --convert-to svg test.odp'

Expected result: a bullet list with 1 list item, text is semi-transparent (opacity is 80%).

Actual result: not-well-formed XML in product build, assertion failure in debug builds.
Comment 1 Commit Notification 2024-09-04 14:08:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0a89d65e6bb7be293c1a7b4615a08292701694dc

tdf#162782 SVG export: fix handling of semi-transparent text inside a list

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-09-04 18:18:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/dde9a8b6c6841e89bec958dcfa1bb36d8728598f

tdf#162782 SVG export: fix handling of semi-transparent text inside a list

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Timur 2024-09-05 11:22:33 UTC
Thanks. This was regression in 7.0 from 

commit 4dbb33a1c21948bebcf890c2f8ceb56b15a87936	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Thu Nov 21 11:50:54 2019 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	Thu Nov 21 12:40:39 2019 +0100

xmloff: add ODF import/export for semi-transparent shape text

Test this from sd, so that SdModelTestBase::saveAndReload() calls
BootstrapFixture::validate() for us.
Comment 4 Commit Notification 2024-09-09 15:08:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6246e86f563a17444e0748492c617272578782a4

tdf#162782 SVG export: fix handling of semi-transparent text inside a list

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 maxbalt 2025-01-01 14:41:57 UTC Comment hidden (spam)
Comment 6 Joseph 2025-03-03 09:02:55 UTC Comment hidden (spam)
Comment 7 Ahmad seo 2025-03-03 11:34:42 UTC Comment hidden (spam)
Comment 8 all cricketer 2025-03-03 15:59:54 UTC Comment hidden (spam)
Comment 9 muhammed bilal 2025-03-03 16:31:57 UTC Comment hidden (spam)
Comment 10 muhammed tahir 2025-03-03 17:12:00 UTC Comment hidden (spam)
Comment 11 BruceEX 2025-04-17 21:07:46 UTC Comment hidden (spam)
Comment 12 BruceEX 2025-04-18 19:51:26 UTC Comment hidden (spam)
Comment 13 David Jackson 2025-06-01 19:10:49 UTC Comment hidden (spam)
Comment 14 maxell 2025-06-02 05:05:22 UTC Comment hidden (spam)
Comment 15 maxell 2025-06-04 23:56:56 UTC Comment hidden (spam)
Comment 16 yalfeez 2025-06-05 06:26:35 UTC Comment hidden (spam)