tdf#162782 SVG export: fix handling of semi-transparent text inside a list

Open the bugdoc, try to export as SVG, results in an assertion failure
in debug builds, the produced XML would not be well-formed.

Commit 666f252457bdb4371d15380a0289e107b2dfbe84 (SVG export: fix lost
semi-transparent text on shapes, 2020-07-17) added support for text
opacity on shapes, but this assumes that the entire shape has the same
opacity, while this shape has 3 paragraphs and only the middle one has
an opacity set, at a text span level. Additionally, it's a bullet, so
the text (for the bullet, has no transparency set) starts before the
transparency metafile action would start. This means that the existing
logic won't realize that opacity should be exported using the
fill-opacity attribute instead of a <g> element.

Fix the problem by checking for the isTextShapeStarted() case in
SVGActionWriter::ImplWriteMask(): if we're already inside text, then we
always want to map a transparency mask to the fill-opacity attribute
instead of a <g> element.

Leave the shape-level code at SVGTextWriter::setTextPosition()
unchanged, that continues to deal with per-shape text opacity.

Change-Id: I8cb0ca2e839fba911a75e1925cf79145f69af151
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172856
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 0a89d65e6bb7be293c1a7b4615a08292701694dc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172823
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>